Añadidos los CADS.

--- a/cherryWeb/cherryWebClassLibrary/cherryWebClassLibrary.csproj
+++ b/cherryWeb/cherryWebClassLibrary/cherryWebClassLibrary.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cherryWebCAD.cs" />
     <Compile Include="cherryWebEN.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
