--- a/cherryWeb/WebApplication1/WebApplication1.csproj
+++ b/cherryWeb/WebApplication1/WebApplication1.csproj
@@ -57,17 +57,19 @@
     <Content Include="Aplicaciones.aspx" />
     <Content Include="Imagenes\Android.jpg" />
     <Content Include="Imagenes\Android2.jpg" />
+    <Content Include="Imagenes\bariitamenu.jpg" />
     <Content Include="Inicio.aspx" />
     <Content Include="InicioSesion.aspx" />
     <Content Include="PerfilApp.aspx" />
     <Content Include="PerfilUsuario.aspx" />
     <Content Include="Prueba.aspx" />
     <Content Include="Registro.aspx" />
-    <Content Include="Styles\Site.css" />
+    <Content Include="Stilo\Stilo.css" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\jquery-1.4.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.1.js" />
     <Content Include="Scripts\jquery-1.4.1.min.js" />
+    <Content Include="Styles\Site.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
