--- a/cherryWeb/WebApplication1/WebApplication1.csproj
+++ b/cherryWeb/WebApplication1/WebApplication1.csproj
@@ -55,12 +55,14 @@
     <Content Include="Account\Login.aspx" />
     <Content Include="Account\Register.aspx" />
     <Content Include="Aplicaciones.aspx" />
-    <Content Include="App_Data\Database.mdf" />
-    <Content Include="App_Data\Database_log.ldf">
+    <Content Include="Imagenes\AndroidBG2.jpg" />
+    <Content Include="Imagenes\App_Data\Database.mdf" />
+    <Content Include="Imagenes\App_Data\Database_log.ldf">
       <DependentUpon>Database.mdf</DependentUpon>
     </Content>
     <Content Include="Imagenes\Android.jpg" />
     <Content Include="Imagenes\Android2.jpg" />
+    <Content Include="Imagenes\AndroidBG.png" />
     <Content Include="Imagenes\androide.jpg" />
     <Content Include="Imagenes\bariitamenu.jpg" />
     <Content Include="Imagenes\ImagenNoDisp.jpg" />
