--- a/cherryWeb/WebApplication1/WebApplication1.csproj
+++ b/cherryWeb/WebApplication1/WebApplication1.csproj
@@ -55,11 +55,11 @@
     <Content Include="Account\Login.aspx" />
     <Content Include="Account\Register.aspx" />
     <Content Include="Aplicaciones.aspx" />
-    <Content Include="Imagenes\AndroidBG2.jpg" />
-    <Content Include="Imagenes\App_Data\Database.mdf" />
-    <Content Include="Imagenes\App_Data\Database_log.ldf">
+    <Content Include="App_Data\Database.mdf" />
+    <Content Include="App_Data\Database_log.LDF">
       <DependentUpon>Database.mdf</DependentUpon>
     </Content>
+    <Content Include="Imagenes\AndroidBG2.jpg" />
     <Content Include="Imagenes\Android.jpg" />
     <Content Include="Imagenes\Android2.jpg" />
     <Content Include="Imagenes\AndroidBG.png" />
