--- a/cherryWeb/cherryWebClassLibrary/cherryWebClassLibrary.csproj
+++ b/cherryWeb/cherryWebClassLibrary/cherryWebClassLibrary.csproj
@@ -40,9 +40,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AplicacionesCAD.cs" />
+    <Compile Include="AplicacionesEN.cs" />
     <Compile Include="cherryWebCAD.cs" />
     <Compile Include="cherryWebEN.cs" />
+    <Compile Include="DescargasCAD.cs" />
+    <Compile Include="DescargasEN.cs" />
+    <Compile Include="ENAplicaciones.cs" />
+    <Compile Include="MediaAplicacionesCAD.cs" />
+    <Compile Include="MensajeCAD.cs" />
+    <Compile Include="MensajeEN.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedesSocialesCAD.cs" />
+    <Compile Include="RedesSocialesEN.cs" />
+    <Compile Include="UsuarioCAD.cs" />
+    <Compile Include="UsuarioEN.cs" />
+    <Compile Include="ValoracionesUsuarioCAD.cs" />
+    <Compile Include="ValoracionesUsuarioEN.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
