--- a/cherryWeb/cherryWebClassLibrary/cherryWebClassLibrary.csproj
+++ b/cherryWeb/cherryWebClassLibrary/cherryWebClassLibrary.csproj
@@ -40,23 +40,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AplicacionesCAD.cs" />
-    <Compile Include="AplicacionesEN.cs" />
-    <Compile Include="cherryWebCAD.cs" />
-    <Compile Include="cherryWebEN.cs" />
-    <Compile Include="DescargasCAD.cs" />
-    <Compile Include="DescargasEN.cs" />
+    <Compile Include="AplicacionCAD.cs" />
     <Compile Include="ENAplicaciones.cs" />
+    <Compile Include="DescargasCAD.cs" />
+    <Compile Include="ENDescargas.cs" />
+    <Compile Include="ENMediaAplicaciones.cs" />
     <Compile Include="MediaAplicacionesCAD.cs" />
     <Compile Include="MensajeCAD.cs" />
-    <Compile Include="MensajeEN.cs" />
+    <Compile Include="ENMensaje.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedesSocialesCAD.cs" />
-    <Compile Include="RedesSocialesEN.cs" />
+    <Compile Include="ENRedesSociales.cs" />
     <Compile Include="UsuarioCAD.cs" />
-    <Compile Include="UsuarioEN.cs" />
+    <Compile Include="ENUsuario.cs" />
     <Compile Include="ValoracionesUsuarioCAD.cs" />
-    <Compile Include="ValoracionesUsuarioEN.cs" />
+    <Compile Include="ENValoracionesUsuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
