--- a/cherryWeb/cherryWebClassLibrary/cherryWebClassLibrary.csproj
+++ b/cherryWeb/cherryWebClassLibrary/cherryWebClassLibrary.csproj
@@ -49,12 +49,25 @@
     <Compile Include="MensajeCAD.cs" />
     <Compile Include="ENMensaje.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="RedesSocialesCAD.cs" />
     <Compile Include="ENRedesSociales.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="UsuarioCAD.cs" />
     <Compile Include="ENUsuario.cs" />
     <Compile Include="ValoracionesUsuarioCAD.cs" />
     <Compile Include="ENValoracionesUsuario.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
