Cambios en la WEB

--- a/cherryWeb/WebApplication1/Web.config
+++ b/cherryWeb/WebApplication1/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
@@ -9,9 +9,10 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="ApplicationServices"
-         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
-         providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
+      providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True;User Instance=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <system.web>
